refactor(service): update TaskService to use TaskRequestDTO and TaskResponseDTO